<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".singlevar.methods.FalseRuleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="60dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:weightSum="1"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1">

            <TextView
                android:id="@+id/textViewParameters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text="@string/enter_parameters"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/textViewFunction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/function"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <EditText
                android:id="@+id/falserule_xmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="XMIN"
                android:inputType="numberSigned|numberDecimal"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <EditText
                android:id="@+id/falserule_xmax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="XMAX"
                android:inputType="numberSigned|numberDecimal"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <EditText
                android:id="@+id/falserule_tolerance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/tolerance"
                android:inputType="numberDecimal"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <EditText
                android:id="@+id/falserule_niter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/iterations"
                android:inputType="number"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_shape"
                android:onClick="falseRule"
                android:text="@string/continue_button"
                android:textColor="@color/textColorButton" />

            <TextView
                android:id="@+id/falserule_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:enabled="false"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:visibility="gone" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/tableLayoutProcedure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10px"
                    android:paddingRight="10px"
                    android:visibility="gone">

                    <TableRow
                        android:id="@+id/tableRowLegend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textViewIterations"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15px"
                            android:paddingTop="10px"
                            android:paddingRight="15px"
                            android:paddingBottom="10px"
                            android:text="@string/table_iterations"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewXi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15px"
                            android:paddingTop="10px"
                            android:paddingRight="15px"
                            android:paddingBottom="10px"
                            android:text="Xi"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewFa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15px"
                            android:paddingTop="10px"
                            android:paddingRight="15px"
                            android:paddingBottom="10px"
                            android:text="F(Xi)"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewXs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15px"
                            android:paddingTop="10px"
                            android:paddingRight="15px"
                            android:paddingBottom="10px"
                            android:text="Xs"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewFb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15px"
                            android:paddingTop="10px"
                            android:paddingRight="15px"
                            android:paddingBottom="10px"
                            android:text="F(Xs)"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewXm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15px"
                            android:paddingTop="10px"
                            android:paddingRight="15px"
                            android:paddingBottom="10px"
                            android:text="Xm"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewSolution"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15px"
                            android:paddingTop="10px"
                            android:paddingRight="15px"
                            android:paddingBottom="10px"
                            android:text="F(Xm)"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewTol"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="15px"
                            android:paddingTop="10px"
                            android:paddingRight="15px"
                            android:paddingBottom="10px"
                            android:text="E"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textStyle="bold" />
                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>