<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".singlevar.methods.IncrementalSearchActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"

            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                android:id="@+id/textViewParameters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="20dp"
                android:textAllCaps="true"
                android:text="@string/enter_parameters"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textViewFunction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textAllCaps="true"
                android:text="@string/function"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextInitialValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:paddingBottom="20dp"
                android:paddingTop="10dp"
                android:textAllCaps="true"
                android:hint="X0"
                android:inputType="numberSigned|numberDecimal"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextDelta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:paddingBottom="20dp"
                android:paddingTop="10dp"
                android:textAllCaps="true"
                android:hint="DELTA"
                android:inputType="numberSigned|numberDecimal"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextIterations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:paddingBottom="20dp"
                android:paddingTop="10dp"
                android:textAllCaps="true"
                android:hint="@string/iterations"
                android:inputType="number"
                android:textAlignment="center" />

            <Button
                android:id="@+id/buttonIncrementalSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorButton"
                android:background="@drawable/button_shape"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:onClick="incrementalSearch"
                android:text="@string/continue_button" />

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAllCaps="true"
                android:enabled="false"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:visibility="gone"
                android:textAlignment="center" />

            <TableLayout
                android:id="@+id/tableLayoutProcedure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="50dp"
                android:visibility="gone" >

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/tableRowLegend"
                    android:padding="10dp" >

                    <TextView
                        android:id="@+id/textViewIterations"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:text="Iter" />

                    <TextView
                        android:id="@+id/textViewXi"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:text="X" />

                    <TextView
                        android:id="@+id/textViewEvaluation"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:text="F(X)" />

                    <TextView
                        android:id="@+id/textViewXi1"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:text="X1" />

                    <TextView
                        android:id="@+id/textViewEvaluation1"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:text="F(X1)" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>